[gd_scene load_steps=5 format=2]

[ext_resource path="res://img/pixelart/bigramp.png" type="Texture" id=1]
[ext_resource path="res://scenes/World/Ramp.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 29.9999
height = 54.0003

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.99991
height = 92.0002

[node name="Ramp" type="Node2D"]
script = ExtResource( 2 )
height = 32
dist = 31

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -24 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["Ramp"]]
position = Vector2( 0, -6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -13 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="ForceJump" type="Area2D" parent="."]
position = Vector2( 0, -6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ForceJump"]
position = Vector2( 0, 6 )
rotation = 1.5708
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="ForceJump" to="." method="_on_ForceJump_body_entered"]
